// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stylesheet-tree-operations get-ancestors should get ancestors of a nested item 1`] = `
{
  "content": [
    {
      "text": "[{"name":"","path":"/","parent":null,"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"},{"name":"_Test Parent","path":"/_Test Parent","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"},{"name":"_Test Child","path":"/_Test Parent/_Test Child","parent":{"path":"/_Test Parent","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"}]",
      "type": "text",
    },
  ],
}
`;

exports[`stylesheet-tree-operations get-children should get child items of a folder 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"name":"_TestTreeStylesheet.css","path":"/_Test Folder/_TestTreeStylesheet.css","parent":{"path":"/_Test Folder","id":"00000000-0000-0000-0000-000000000000"},"isFolder":false,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`stylesheet-tree-operations get-root should get root level stylesheets 1`] = `
{
  "content": [
    {
      "text": "{"total":3,"items":[{"name":"dropdownStyles.css","path":"/dropdownStyles.css","parent":null,"isFolder":false,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"},{"name":"index.css","path":"/index.css","parent":null,"isFolder":false,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"},{"name":"index.css.map","path":"/index.css.map","parent":null,"isFolder":false,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`stylesheet-tree-operations get-search should search for stylesheets 1`] = `
{
  "content": [
    {
      "text": "[{"isFolder":false,"name":"_TestTreeStylesheet.css","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"path":"/_TestTreeStylesheet.css","id":"00000000-0000-0000-0000-000000000000"}]",
      "type": "text",
    },
  ],
}
`;
